# amd64

./: .clang-format  CMakeLists.txt  README.md  example.ir  qodana.sarif.json  qodana.yaml
examples/: CMakeLists.txt  example.ir  math_module.cpp  textual_ir.cpp  tinyc.cpp
include/amd64/assembler/: assembler.hpp  registers.hpp
include/amd64/codegen/: allocation.hpp  codegen.hpp  verify.hpp
include/amd64/core/: encode.hpp
include/amd64/ir/: fmt.hpp  ir.hpp  parser.hpp
include/amd64/memory/: buffer.hpp
source/: entry.cpp
tests/: CMakeLists.txt  allocator.cpp  assembler.cpp  codegen.cpp  codegen_alloc.cpp  codegen_ext.cpp  core.cpp  encode.cpp  fmt.cpp  ir.cpp  lexer.cpp  parser.cpp  register.cpp  verifier.cpp
